If a webdav resource is not a directory and the server did not specify its content-type, attempt to guess the content-type from its name.

This fix depends on David's fix for KFileItem. See
http://commits.kde.org/kdelibs/7a0244bd796ffc52b4e6634fff25fc1366ef12a4

BUG: 277814
FIXED-IN: 4.7.4